--- a/package.json
+++ b/package.json
@@ -23,5 +23,18 @@
     "vue-cli-plugin-vuetify": "~2.5.4",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nextseo/school.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nextseo/school/issues"
+  },
+  "homepage": "https://github.com/nextseo/school#readme"
 }
